compiler_project/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> declaration_list
Rule 2     declaration_list -> declaration_list declaration
Rule 3     declaration_list -> declaration
Rule 4     declaration -> var_declaration
Rule 5     declaration -> fun_declaration
Rule 6     var_declaration -> type_specifier ID SEMICOLON
Rule 7     var_declaration -> type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON
Rule 8     type_specifier -> INT
Rule 9     type_specifier -> FLOAT
Rule 10    type_specifier -> VOID
Rule 11    type_specifier -> CHAR
Rule 12    type_specifier -> BOOLEAN
Rule 13    var_declaration -> type_specifier ID error
Rule 14    fun_declaration -> type_specifier ID LPAREN params RPAREN compound_stmt
Rule 15    params -> param_list
Rule 16    params -> VOID
Rule 17    param_list -> param_list COMMA param
Rule 18    param_list -> param
Rule 19    param -> type_specifier ID
Rule 20    param -> type_specifier ID LBRACKET RBRACKET
Rule 21    compound_stmt -> LBRACE local_declarations statement_list RBRACE
Rule 22    local_declarations -> local_declarations var_declaration
Rule 23    local_declarations -> empty
Rule 24    statement_list -> statement_list statement
Rule 25    statement_list -> empty
Rule 26    statement -> expression_stmt
Rule 27    statement -> compound_stmt
Rule 28    statement -> selection_stmt
Rule 29    statement -> iteration_stmt
Rule 30    statement -> return_stmt
Rule 31    expression_stmt -> expression SEMICOLON
Rule 32    expression_stmt -> SEMICOLON
Rule 33    expression_stmt -> expression error
Rule 34    selection_stmt -> IF LPAREN expression RPAREN statement
Rule 35    selection_stmt -> IF LPAREN expression RPAREN statement ELSE statement
Rule 36    iteration_stmt -> WHILE LPAREN expression RPAREN statement
Rule 37    return_stmt -> RETURN SEMICOLON
Rule 38    return_stmt -> RETURN expression SEMICOLON
Rule 39    return_stmt -> RETURN expression error
Rule 40    expression -> var ASSIGN expression
Rule 41    expression -> logical_expression
Rule 42    var -> ID
Rule 43    var -> ID LBRACKET expression RBRACKET
Rule 44    logical_expression -> logical_expression OR and_expression
Rule 45    logical_expression -> and_expression
Rule 46    and_expression -> and_expression AND simple_expression
Rule 47    and_expression -> simple_expression
Rule 48    simple_expression -> additive_expression relop additive_expression
Rule 49    simple_expression -> additive_expression
Rule 50    relop -> LE
Rule 51    relop -> LT
Rule 52    relop -> GT
Rule 53    relop -> GE
Rule 54    relop -> EQ
Rule 55    relop -> NE
Rule 56    additive_expression -> additive_expression addop term
Rule 57    additive_expression -> term
Rule 58    addop -> PLUS
Rule 59    addop -> MINUS
Rule 60    term -> term mulop factor
Rule 61    term -> factor
Rule 62    mulop -> TIMES
Rule 63    mulop -> DIVIDE
Rule 64    factor -> LPAREN expression RPAREN
Rule 65    factor -> var
Rule 66    factor -> call
Rule 67    factor -> NUMBER
Rule 68    factor -> FLOAT_NUM
Rule 69    factor -> CHAR_LITERAL
Rule 70    factor -> TRUE
Rule 71    factor -> FALSE
Rule 72    call -> ID LPAREN args RPAREN
Rule 73    args -> arg_list
Rule 74    args -> empty
Rule 75    arg_list -> arg_list COMMA expression
Rule 76    arg_list -> expression
Rule 77    empty -> <empty>

Terminals, with rules where they appear

AND                  : 46
ASSIGN               : 40
BOOLEAN              : 12
CHAR                 : 11
CHAR_LITERAL         : 69
COMMA                : 17 75
DIVIDE               : 63
ELSE                 : 35
EQ                   : 54
FALSE                : 71
FLOAT                : 9
FLOAT_NUM            : 68
GE                   : 53
GT                   : 52
ID                   : 6 7 13 14 19 20 42 43 72
IF                   : 34 35
INT                  : 8
LBRACE               : 21
LBRACKET             : 7 20 43
LE                   : 50
LPAREN               : 14 34 35 36 64 72
LT                   : 51
MINUS                : 59
NE                   : 55
NUMBER               : 7 67
OR                   : 44
PLUS                 : 58
RBRACE               : 21
RBRACKET             : 7 20 43
RETURN               : 37 38 39
RPAREN               : 14 34 35 36 64 72
SEMICOLON            : 6 7 31 32 37 38
TIMES                : 62
TRUE                 : 70
VOID                 : 10 16
WHILE                : 36
error                : 13 33 39

Nonterminals, with rules where they appear

additive_expression  : 48 48 49 56
addop                : 56
and_expression       : 44 45 46
arg_list             : 73 75
args                 : 72
call                 : 66
compound_stmt        : 14 27
declaration          : 2 3
declaration_list     : 1 2
empty                : 23 25 74
expression           : 31 33 34 35 36 38 39 40 43 64 75 76
expression_stmt      : 26
factor               : 60 61
fun_declaration      : 5
iteration_stmt       : 29
local_declarations   : 21 22
logical_expression   : 41 44
mulop                : 60
param                : 17 18
param_list           : 15 17
params               : 14
program              : 0
relop                : 48
return_stmt          : 30
selection_stmt       : 28
simple_expression    : 46 47
statement            : 24 34 35 35 36
statement_list       : 21 24
term                 : 56 57 60
type_specifier       : 6 7 13 14 19 20
var                  : 40 65
var_declaration      : 4 22

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declaration_list
    (2) declaration_list -> . declaration_list declaration
    (3) declaration_list -> . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . fun_declaration
    (6) var_declaration -> . type_specifier ID SEMICOLON
    (7) var_declaration -> . type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON
    (13) var_declaration -> . type_specifier ID error
    (14) fun_declaration -> . type_specifier ID LPAREN params RPAREN compound_stmt
    (8) type_specifier -> . INT
    (9) type_specifier -> . FLOAT
    (10) type_specifier -> . VOID
    (11) type_specifier -> . CHAR
    (12) type_specifier -> . BOOLEAN

    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    VOID            shift and go to state 9
    CHAR            shift and go to state 10
    BOOLEAN         shift and go to state 11

    program                        shift and go to state 1
    declaration_list               shift and go to state 2
    declaration                    shift and go to state 3
    var_declaration                shift and go to state 4
    fun_declaration                shift and go to state 5
    type_specifier                 shift and go to state 6

state 1

    (0) S' -> program .



state 2

    (1) program -> declaration_list .
    (2) declaration_list -> declaration_list . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . fun_declaration
    (6) var_declaration -> . type_specifier ID SEMICOLON
    (7) var_declaration -> . type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON
    (13) var_declaration -> . type_specifier ID error
    (14) fun_declaration -> . type_specifier ID LPAREN params RPAREN compound_stmt
    (8) type_specifier -> . INT
    (9) type_specifier -> . FLOAT
    (10) type_specifier -> . VOID
    (11) type_specifier -> . CHAR
    (12) type_specifier -> . BOOLEAN

    $end            reduce using rule 1 (program -> declaration_list .)
    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    VOID            shift and go to state 9
    CHAR            shift and go to state 10
    BOOLEAN         shift and go to state 11

    declaration                    shift and go to state 12
    var_declaration                shift and go to state 4
    fun_declaration                shift and go to state 5
    type_specifier                 shift and go to state 6

state 3

    (3) declaration_list -> declaration .

    INT             reduce using rule 3 (declaration_list -> declaration .)
    FLOAT           reduce using rule 3 (declaration_list -> declaration .)
    VOID            reduce using rule 3 (declaration_list -> declaration .)
    CHAR            reduce using rule 3 (declaration_list -> declaration .)
    BOOLEAN         reduce using rule 3 (declaration_list -> declaration .)
    $end            reduce using rule 3 (declaration_list -> declaration .)


state 4

    (4) declaration -> var_declaration .

    INT             reduce using rule 4 (declaration -> var_declaration .)
    FLOAT           reduce using rule 4 (declaration -> var_declaration .)
    VOID            reduce using rule 4 (declaration -> var_declaration .)
    CHAR            reduce using rule 4 (declaration -> var_declaration .)
    BOOLEAN         reduce using rule 4 (declaration -> var_declaration .)
    $end            reduce using rule 4 (declaration -> var_declaration .)


state 5

    (5) declaration -> fun_declaration .

    INT             reduce using rule 5 (declaration -> fun_declaration .)
    FLOAT           reduce using rule 5 (declaration -> fun_declaration .)
    VOID            reduce using rule 5 (declaration -> fun_declaration .)
    CHAR            reduce using rule 5 (declaration -> fun_declaration .)
    BOOLEAN         reduce using rule 5 (declaration -> fun_declaration .)
    $end            reduce using rule 5 (declaration -> fun_declaration .)


state 6

    (6) var_declaration -> type_specifier . ID SEMICOLON
    (7) var_declaration -> type_specifier . ID LBRACKET NUMBER RBRACKET SEMICOLON
    (13) var_declaration -> type_specifier . ID error
    (14) fun_declaration -> type_specifier . ID LPAREN params RPAREN compound_stmt

    ID              shift and go to state 13


state 7

    (8) type_specifier -> INT .

    ID              reduce using rule 8 (type_specifier -> INT .)


state 8

    (9) type_specifier -> FLOAT .

    ID              reduce using rule 9 (type_specifier -> FLOAT .)


state 9

    (10) type_specifier -> VOID .

    ID              reduce using rule 10 (type_specifier -> VOID .)


state 10

    (11) type_specifier -> CHAR .

    ID              reduce using rule 11 (type_specifier -> CHAR .)


state 11

    (12) type_specifier -> BOOLEAN .

    ID              reduce using rule 12 (type_specifier -> BOOLEAN .)


state 12

    (2) declaration_list -> declaration_list declaration .

    INT             reduce using rule 2 (declaration_list -> declaration_list declaration .)
    FLOAT           reduce using rule 2 (declaration_list -> declaration_list declaration .)
    VOID            reduce using rule 2 (declaration_list -> declaration_list declaration .)
    CHAR            reduce using rule 2 (declaration_list -> declaration_list declaration .)
    BOOLEAN         reduce using rule 2 (declaration_list -> declaration_list declaration .)
    $end            reduce using rule 2 (declaration_list -> declaration_list declaration .)


state 13

    (6) var_declaration -> type_specifier ID . SEMICOLON
    (7) var_declaration -> type_specifier ID . LBRACKET NUMBER RBRACKET SEMICOLON
    (13) var_declaration -> type_specifier ID . error
    (14) fun_declaration -> type_specifier ID . LPAREN params RPAREN compound_stmt

    SEMICOLON       shift and go to state 14
    LBRACKET        shift and go to state 15
    error           shift and go to state 16
    LPAREN          shift and go to state 17


state 14

    (6) var_declaration -> type_specifier ID SEMICOLON .

    INT             reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    FLOAT           reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    VOID            reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    CHAR            reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    BOOLEAN         reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    $end            reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    RBRACE          reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    SEMICOLON       reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    LBRACE          reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    IF              reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    WHILE           reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    RETURN          reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    ID              reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    LPAREN          reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    NUMBER          reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    FLOAT_NUM       reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    CHAR_LITERAL    reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    TRUE            reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)
    FALSE           reduce using rule 6 (var_declaration -> type_specifier ID SEMICOLON .)


state 15

    (7) var_declaration -> type_specifier ID LBRACKET . NUMBER RBRACKET SEMICOLON

    NUMBER          shift and go to state 18


state 16

    (13) var_declaration -> type_specifier ID error .

    INT             reduce using rule 13 (var_declaration -> type_specifier ID error .)
    FLOAT           reduce using rule 13 (var_declaration -> type_specifier ID error .)
    VOID            reduce using rule 13 (var_declaration -> type_specifier ID error .)
    CHAR            reduce using rule 13 (var_declaration -> type_specifier ID error .)
    BOOLEAN         reduce using rule 13 (var_declaration -> type_specifier ID error .)
    $end            reduce using rule 13 (var_declaration -> type_specifier ID error .)
    RBRACE          reduce using rule 13 (var_declaration -> type_specifier ID error .)
    SEMICOLON       reduce using rule 13 (var_declaration -> type_specifier ID error .)
    LBRACE          reduce using rule 13 (var_declaration -> type_specifier ID error .)
    IF              reduce using rule 13 (var_declaration -> type_specifier ID error .)
    WHILE           reduce using rule 13 (var_declaration -> type_specifier ID error .)
    RETURN          reduce using rule 13 (var_declaration -> type_specifier ID error .)
    ID              reduce using rule 13 (var_declaration -> type_specifier ID error .)
    LPAREN          reduce using rule 13 (var_declaration -> type_specifier ID error .)
    NUMBER          reduce using rule 13 (var_declaration -> type_specifier ID error .)
    FLOAT_NUM       reduce using rule 13 (var_declaration -> type_specifier ID error .)
    CHAR_LITERAL    reduce using rule 13 (var_declaration -> type_specifier ID error .)
    TRUE            reduce using rule 13 (var_declaration -> type_specifier ID error .)
    FALSE           reduce using rule 13 (var_declaration -> type_specifier ID error .)


state 17

    (14) fun_declaration -> type_specifier ID LPAREN . params RPAREN compound_stmt
    (15) params -> . param_list
    (16) params -> . VOID
    (17) param_list -> . param_list COMMA param
    (18) param_list -> . param
    (19) param -> . type_specifier ID
    (20) param -> . type_specifier ID LBRACKET RBRACKET
    (8) type_specifier -> . INT
    (9) type_specifier -> . FLOAT
    (10) type_specifier -> . VOID
    (11) type_specifier -> . CHAR
    (12) type_specifier -> . BOOLEAN

    VOID            shift and go to state 22
    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    CHAR            shift and go to state 10
    BOOLEAN         shift and go to state 11

    type_specifier                 shift and go to state 19
    params                         shift and go to state 20
    param_list                     shift and go to state 21
    param                          shift and go to state 23

state 18

    (7) var_declaration -> type_specifier ID LBRACKET NUMBER . RBRACKET SEMICOLON

    RBRACKET        shift and go to state 24


state 19

    (19) param -> type_specifier . ID
    (20) param -> type_specifier . ID LBRACKET RBRACKET

    ID              shift and go to state 25


state 20

    (14) fun_declaration -> type_specifier ID LPAREN params . RPAREN compound_stmt

    RPAREN          shift and go to state 26


state 21

    (15) params -> param_list .
    (17) param_list -> param_list . COMMA param

    RPAREN          reduce using rule 15 (params -> param_list .)
    COMMA           shift and go to state 27


state 22

    (16) params -> VOID .
    (10) type_specifier -> VOID .

    RPAREN          reduce using rule 16 (params -> VOID .)
    ID              reduce using rule 10 (type_specifier -> VOID .)


state 23

    (18) param_list -> param .

    COMMA           reduce using rule 18 (param_list -> param .)
    RPAREN          reduce using rule 18 (param_list -> param .)


state 24

    (7) var_declaration -> type_specifier ID LBRACKET NUMBER RBRACKET . SEMICOLON

    SEMICOLON       shift and go to state 28


state 25

    (19) param -> type_specifier ID .
    (20) param -> type_specifier ID . LBRACKET RBRACKET

    COMMA           reduce using rule 19 (param -> type_specifier ID .)
    RPAREN          reduce using rule 19 (param -> type_specifier ID .)
    LBRACKET        shift and go to state 29


state 26

    (14) fun_declaration -> type_specifier ID LPAREN params RPAREN . compound_stmt
    (21) compound_stmt -> . LBRACE local_declarations statement_list RBRACE

    LBRACE          shift and go to state 31

    compound_stmt                  shift and go to state 30

state 27

    (17) param_list -> param_list COMMA . param
    (19) param -> . type_specifier ID
    (20) param -> . type_specifier ID LBRACKET RBRACKET
    (8) type_specifier -> . INT
    (9) type_specifier -> . FLOAT
    (10) type_specifier -> . VOID
    (11) type_specifier -> . CHAR
    (12) type_specifier -> . BOOLEAN

    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    VOID            shift and go to state 9
    CHAR            shift and go to state 10
    BOOLEAN         shift and go to state 11

    param                          shift and go to state 32
    type_specifier                 shift and go to state 19

state 28

    (7) var_declaration -> type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON .

    INT             reduce using rule 7 (var_declaration -> type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON .)
    FLOAT           reduce using rule 7 (var_declaration -> type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON .)
    VOID            reduce using rule 7 (var_declaration -> type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON .)
    CHAR            reduce using rule 7 (var_declaration -> type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON .)
    BOOLEAN         reduce using rule 7 (var_declaration -> type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON .)
    $end            reduce using rule 7 (var_declaration -> type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON .)
    RBRACE          reduce using rule 7 (var_declaration -> type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON .)
    SEMICOLON       reduce using rule 7 (var_declaration -> type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON .)
    LBRACE          reduce using rule 7 (var_declaration -> type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON .)
    IF              reduce using rule 7 (var_declaration -> type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON .)
    WHILE           reduce using rule 7 (var_declaration -> type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON .)
    RETURN          reduce using rule 7 (var_declaration -> type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON .)
    ID              reduce using rule 7 (var_declaration -> type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON .)
    LPAREN          reduce using rule 7 (var_declaration -> type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON .)
    NUMBER          reduce using rule 7 (var_declaration -> type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON .)
    FLOAT_NUM       reduce using rule 7 (var_declaration -> type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON .)
    CHAR_LITERAL    reduce using rule 7 (var_declaration -> type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON .)
    TRUE            reduce using rule 7 (var_declaration -> type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON .)
    FALSE           reduce using rule 7 (var_declaration -> type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON .)


state 29

    (20) param -> type_specifier ID LBRACKET . RBRACKET

    RBRACKET        shift and go to state 33


state 30

    (14) fun_declaration -> type_specifier ID LPAREN params RPAREN compound_stmt .

    INT             reduce using rule 14 (fun_declaration -> type_specifier ID LPAREN params RPAREN compound_stmt .)
    FLOAT           reduce using rule 14 (fun_declaration -> type_specifier ID LPAREN params RPAREN compound_stmt .)
    VOID            reduce using rule 14 (fun_declaration -> type_specifier ID LPAREN params RPAREN compound_stmt .)
    CHAR            reduce using rule 14 (fun_declaration -> type_specifier ID LPAREN params RPAREN compound_stmt .)
    BOOLEAN         reduce using rule 14 (fun_declaration -> type_specifier ID LPAREN params RPAREN compound_stmt .)
    $end            reduce using rule 14 (fun_declaration -> type_specifier ID LPAREN params RPAREN compound_stmt .)


state 31

    (21) compound_stmt -> LBRACE . local_declarations statement_list RBRACE
    (22) local_declarations -> . local_declarations var_declaration
    (23) local_declarations -> . empty
    (77) empty -> .

    INT             reduce using rule 77 (empty -> .)
    FLOAT           reduce using rule 77 (empty -> .)
    VOID            reduce using rule 77 (empty -> .)
    CHAR            reduce using rule 77 (empty -> .)
    BOOLEAN         reduce using rule 77 (empty -> .)
    RBRACE          reduce using rule 77 (empty -> .)
    SEMICOLON       reduce using rule 77 (empty -> .)
    LBRACE          reduce using rule 77 (empty -> .)
    IF              reduce using rule 77 (empty -> .)
    WHILE           reduce using rule 77 (empty -> .)
    RETURN          reduce using rule 77 (empty -> .)
    ID              reduce using rule 77 (empty -> .)
    LPAREN          reduce using rule 77 (empty -> .)
    NUMBER          reduce using rule 77 (empty -> .)
    FLOAT_NUM       reduce using rule 77 (empty -> .)
    CHAR_LITERAL    reduce using rule 77 (empty -> .)
    TRUE            reduce using rule 77 (empty -> .)
    FALSE           reduce using rule 77 (empty -> .)

    local_declarations             shift and go to state 34
    empty                          shift and go to state 35

state 32

    (17) param_list -> param_list COMMA param .

    COMMA           reduce using rule 17 (param_list -> param_list COMMA param .)
    RPAREN          reduce using rule 17 (param_list -> param_list COMMA param .)


state 33

    (20) param -> type_specifier ID LBRACKET RBRACKET .

    COMMA           reduce using rule 20 (param -> type_specifier ID LBRACKET RBRACKET .)
    RPAREN          reduce using rule 20 (param -> type_specifier ID LBRACKET RBRACKET .)


state 34

    (21) compound_stmt -> LBRACE local_declarations . statement_list RBRACE
    (22) local_declarations -> local_declarations . var_declaration
    (24) statement_list -> . statement_list statement
    (25) statement_list -> . empty
    (6) var_declaration -> . type_specifier ID SEMICOLON
    (7) var_declaration -> . type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON
    (13) var_declaration -> . type_specifier ID error
    (77) empty -> .
    (8) type_specifier -> . INT
    (9) type_specifier -> . FLOAT
    (10) type_specifier -> . VOID
    (11) type_specifier -> . CHAR
    (12) type_specifier -> . BOOLEAN

    RBRACE          reduce using rule 77 (empty -> .)
    SEMICOLON       reduce using rule 77 (empty -> .)
    LBRACE          reduce using rule 77 (empty -> .)
    IF              reduce using rule 77 (empty -> .)
    WHILE           reduce using rule 77 (empty -> .)
    RETURN          reduce using rule 77 (empty -> .)
    ID              reduce using rule 77 (empty -> .)
    LPAREN          reduce using rule 77 (empty -> .)
    NUMBER          reduce using rule 77 (empty -> .)
    FLOAT_NUM       reduce using rule 77 (empty -> .)
    CHAR_LITERAL    reduce using rule 77 (empty -> .)
    TRUE            reduce using rule 77 (empty -> .)
    FALSE           reduce using rule 77 (empty -> .)
    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    VOID            shift and go to state 9
    CHAR            shift and go to state 10
    BOOLEAN         shift and go to state 11

    statement_list                 shift and go to state 36
    var_declaration                shift and go to state 37
    empty                          shift and go to state 38
    type_specifier                 shift and go to state 39

state 35

    (23) local_declarations -> empty .

    INT             reduce using rule 23 (local_declarations -> empty .)
    FLOAT           reduce using rule 23 (local_declarations -> empty .)
    VOID            reduce using rule 23 (local_declarations -> empty .)
    CHAR            reduce using rule 23 (local_declarations -> empty .)
    BOOLEAN         reduce using rule 23 (local_declarations -> empty .)
    RBRACE          reduce using rule 23 (local_declarations -> empty .)
    SEMICOLON       reduce using rule 23 (local_declarations -> empty .)
    LBRACE          reduce using rule 23 (local_declarations -> empty .)
    IF              reduce using rule 23 (local_declarations -> empty .)
    WHILE           reduce using rule 23 (local_declarations -> empty .)
    RETURN          reduce using rule 23 (local_declarations -> empty .)
    ID              reduce using rule 23 (local_declarations -> empty .)
    LPAREN          reduce using rule 23 (local_declarations -> empty .)
    NUMBER          reduce using rule 23 (local_declarations -> empty .)
    FLOAT_NUM       reduce using rule 23 (local_declarations -> empty .)
    CHAR_LITERAL    reduce using rule 23 (local_declarations -> empty .)
    TRUE            reduce using rule 23 (local_declarations -> empty .)
    FALSE           reduce using rule 23 (local_declarations -> empty .)


state 36

    (21) compound_stmt -> LBRACE local_declarations statement_list . RBRACE
    (24) statement_list -> statement_list . statement
    (26) statement -> . expression_stmt
    (27) statement -> . compound_stmt
